Aggiornamento pre-finale 2 (non so se devo mettere altro, se non metto altro è finale)

--- a/index.html
+++ b/index.html
@@ -19,21 +19,21 @@
         <section class="schools-row">
             <div class="school-card palizzi-bg">
                 <img src="assets/palizzi-photo.jpg" alt="Scuola Palizzi" class="school-photo">
-                <h2>PALIZZI</h2>
+                <h2>Polo Economico</h2>
                 <div class="discover-box">
                     <a href="https://palizzi.edu.it" class="button palizzi">SCOPRI</a>
                 </div>
             </div>
             <div class="school-card mattei-bg">
                 <img src="assets/mattei-photo.jpg" alt="Scuola Mattei" class="school-photo">
-                <h2>MATTEI</h2>
+                <h2>Polo Tecnologico Scientifico</h2>
                 <div class="discover-box">
                     <a href="https://itivasto.it" class="button mattei">SCOPRI</a>
                 </div>
             </div>
         </section>
         <section class="orientation-section">
-            <a href="#" class="button orientation big-orientation">ORIENTAMENTO 2025</a>
+            <a href="https://orientamento.palizzimattei.edu.it" class="button orientation big-orientation">ORIENTAMENTO 2025</a>
         </section>
     </main>
 
@@ -41,13 +41,26 @@
         <div class="footer-content">
             <div class="footer-left-text">
                 <h3>Contatti</h3>
-                <p><strong>Scuola Palizzi:</strong></p>
-                <p>Email: info@palizzi.edu.it</p>
-                <p>Telefono: +39 XXXX XXXXX</p>
+                <p><strong>Polo Economico (Palizzi):</strong></p>
+                <p>Via dei Conti Ricci, 25 - 66054 Vasto (CH)</p>
+                <p>Telefono: <a href="callto:0873367114">0873 367114</a></p>
+                <p>Email: <a href="mailto:CHIS013002@istruzione.it">CHIS013002@istruzione.it</a></p>
+                <p>PEC: <a href="mailto:CHIS013002@pec.istruzione.it">CHIS013002@pec.istruzione.it</a></p>
+                <p>Codice Fiscale: 83001590690</p>
+                <p>Codice Meccanografico: CHIS013002</p>
                 <br>
-                <p><strong>Scuola Mattei:</strong></p>
-                <p>Email: info@mattei.it</p>
-                <p>Telefono: +39 XXXX XXXXX</p>
+                <hr>
+                <br>
+                <p><strong>Polo Tecnologico Scientifico (Mattei):</strong></p>
+                <p>Via S. Rocco, 2 - 66054 Vasto (CH)</p>
+                <p>Telefono: <a href="tel:0873367770">0873 367770</a></p>
+                <p>Email: <a href="mailto:chis013002@istruzione.it">chis013002@istruzione.it</a></p>
+                <p>PEC: <a href="mailto:chis013002@pec.istruzione.it">chis013002@pec.istruzione.it</a></p>
+                <p>Codice Fiscale: 83001670690</p>
+                <br>
+                <hr>
+                <br>
+                <p style="text-align: center;">Creato col ❤️ dalla 5C Informatica</p>
             </div>
         </div>
     </footer>
