--- a/index.html
+++ b/index.html
@@ -7,43 +7,52 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+    <!-- HEADER -->
     <header class="header">
         <img src="assets/logo-ministero.png" alt="Logo Ministero" class="logo-ministero">
     </header>
 
-    <section class="school-logo">
-        <img src="assets/IIS PalizziMattei Vasto.png" alt="Logo Scuola Unita" class="logo-school">
+    <!-- HERO -->
+    <section class="hero">
+        <h1 class="hero-title">IIS PalizziMattei Vasto</h1>
+        <p class="hero-sub">Innovazione, Futuro, Successo</p>
     </section>
 
+    <!-- MAIN CONTENT -->
     <main class="main-content">
+        <!-- CARDS POLI -->
         <section class="schools-row">
             <div class="school-card palizzi-bg">
-                <img src="assets/palizzi-photo.jpg" alt="Scuola Palizzi" class="school-photo">
+                <div class="card-image"></div>
                 <h2>Polo Economico</h2>
                 <div class="discover-box">
                     <a href="https://palizzi.edu.it" class="button palizzi">SCOPRI</a>
                 </div>
             </div>
             <div class="school-card mattei-bg">
-                <img src="assets/mattei-photo.jpg" alt="Scuola Mattei" class="school-photo">
+                <div class="card-image"></div>
                 <h2>Polo Tecnologico Scientifico</h2>
                 <div class="discover-box">
                     <a href="https://itivasto.it" class="button mattei">SCOPRI</a>
                 </div>
             </div>
         </section>
-        <section class="orientation-section">
-            <a href="https://orientamento.palizzimattei.edu.it" class="button orientation big-orientation">ORIENTAMENTO 2025</a>
+
+        <!-- ORIENTAMENTO -->
+        <section class="orientation-container">
+            <a href="https://orientamento.palizzimattei.edu.it" class="button big-orientation">ORIENTAMENTO 2025</a>
         </section>
     </main>
 
+    <!-- FOOTER -->
     <footer class="footer">
         <div class="footer-content">
             <div class="footer-left-text">
                 <h3>Contatti</h3>
                 <p><strong>Polo Economico (Palizzi):</strong></p>
                 <p>Via dei Conti Ricci, 25 - 66054 Vasto (CH)</p>
-                <p>Telefono: <a href="callto:0873367114">0873 367114</a></p>
+                <p>Telefono: <a href="tel:0873367114">0873 367114</a></p>
                 <p>Email: <a href="mailto:CHIS013002@istruzione.it">CHIS013002@istruzione.it</a></p>
                 <p>PEC: <a href="mailto:CHIS013002@pec.istruzione.it">CHIS013002@pec.istruzione.it</a></p>
                 <p>Codice Fiscale: 83001590690</p>
@@ -64,5 +73,6 @@
             </div>
         </div>
     </footer>
+
 </body>
 </html>
