aggiornamento finale versione 2 (aggiunto gli handle social)

--- a/index.html
+++ b/index.html
@@ -68,8 +68,16 @@
                 <p>Codice Fiscale: 83001670690</p>
                 <br>
                 <hr>
+                <section class="social-media">
+                    <a href="https://www.facebook.com/IISPalizziMatteiVasto" target="_blank" class="icon facebook"></a>
+                    <a href="https://www.instagram.com/iispalizzimattei.vasto/" target="_blank" class="icon instagram"></a>
+                    <a href="https://www.youtube.com/@iispalizzimatteivasto" target="_blank" class="icon youtube"></a>
+                    <a href="https://www.tiktok.com/@iispalizzimatteivasto" target="_blank" class="icon tiktok"></a>
+                </section>
                 <br>
-                <p style="text-align: center;">Creato col ❤️ dalla 5C Informatica</p>
+                <hr>
+                <br>
+                <p style="text-align: center;">Creato col ❤️ e col 🧠 dalla 5C Informatica</p>
             </div>
         </div>
     </footer>
